2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
      Rewrote the SongTimer class to use PlayerEngine.Position. Doesn't rely on
      PlayerEngineState events anymore. This also means that SongTimer works well while
      listening to songs on Last.fm.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/Queue.cs:
    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Implement MusicBrainzId
      property and using that data to generate requests to Last.fm. Currently isn't
      attached to any real data source, so the ID is always empty.

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Core/Banshee.ThickClient/Banshee.Gui/BaseClientWindow.cs: Port fix across from
      stable so that using Alt+F4 to close the main window works again.

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
      Remove a few bits of commented code. Added Stock.Properties icon for the Configure
      menu item.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Added Ctrl+E keyboard
      shortcut for equalizer window.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: Added Stock.Preferences
      icon for Preferences menu item.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Added E keyboard shortcut
      for track editor dialog.

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs: Use the static
      instance of Account shared by others, rather than creating a seperate instance.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Added support for keeping